--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet"type="text/css"href="style.css">
 </head>
 <body>
-	<div class="container ">
+	<div><div class="container ">
 		<div class="row">
 			<header class="text-center col-12">
 				<div class="justify-content-center">
@@ -16,7 +16,7 @@
 					<h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
 		   </center>
 		   </div>
-		   		</header>
+		   		</header></div>
             <div class="buffer col-12"></div>
 			<section class="text-center col-12">
             <hr>
